# condo-agora

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  GEMINI.md  README.md  design-roadmap.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh  tsconfig.json  turbo.json  vercel.json
.ai/: BACKEND.md  DATABASE.md  DEPLOYMENT.md  FRONTEND.md  GRAPHQL.md  OVERVIEW.md  PATTERNS.md  README.md  TESTING.md
.ai/features/: i18n-spec.md
.github/workflows/: deploy.yml  lint.yml  test.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh  create-new-feature.sh
.specify/templates/: plan-template.md  tasks-template.md
api/: index.py  pyproject.toml  requirements.txt
apps/api/: .env.example  .flake8  build.sh  database.py  index.py  package.json  pytest.ini  requirements-dev.txt  requirements.txt  schema.py
apps/api/graphql_types/: analytics.py  announcement.py  auth.py  budget.py  comment.py  document.py  house.py  note.py  notification.py  onboarding.py  project_milestone.py  proposal.py  proposal_vote.py  voting.py
apps/api/i18n/: __init__.py  keys.py
apps/api/models/: __init__.py  announcement.py  base.py  budget.py  comment.py  document.py  house.py  invitation.py  note.py  proposal.py  (+6 more)
apps/web/: .env.local  .env.local.example  .eslintrc.json  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js
docs/: BACKEND.md  DATABASE.md  FRONTEND.md  GRAPHQL.md  OVERVIEW.md  ROADMAP.md  TESTING.md  VOTING.md  testing-roadmap.md
docs/features/: auth-implementation.md  house-account-management.md
scripts/: wipe-user-data.js
(+282 files in other folders)
