[project]
name = "condo-agora-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "strawberry-graphql[fastapi]>=0.213.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "motor>=3.3.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.25.0",
    "resend>=0.7.0",
]
